--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -24,11 +24,11 @@ openai==1.3.7
 # Text Processing and NLP
 rank-bm25==0.2.2
 
-# LangChain for Memory Management
-langchain==0.0.335
-langchain-core==0.0.12
-langchain-openai==0.0.2
-tiktoken==0.5.1
+# LangChain for Memory Management - Updated to compatible versions
+langchain==0.1.20
+langchain-core==0.1.52
+langchain-openai==0.1.8
+tiktoken==0.7.0
 
 # Document Processing
 PyPDF2==3.0.1
