--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -24,10 +24,10 @@ openai==1.3.7
 # Text Processing and NLP
 rank-bm25==0.2.2
 
-# LangChain for Memory Management - Updated to compatible versions
-langchain==0.1.20
+# LangChain for Memory Management - Exactly matching versions
+langchain==0.1.52
 langchain-core==0.1.52
-langchain-openai==0.1.8
+langchain-openai==0.1.13
 tiktoken==0.7.0
 
 # Document Processing
