--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -24,11 +24,11 @@ openai==1.3.7
 # Text Processing and NLP
 rank-bm25==0.2.2
 
-# LangChain for Memory Management - Exactly matching versions
-langchain==0.1.52
-langchain-core==0.1.52
-langchain-openai==0.1.13
-tiktoken==0.7.0
+# LangChain for Memory Management - Known available compatible versions
+langchain==0.1.17
+langchain-core==0.1.46
+langchain-openai==0.1.6
+tiktoken==0.6.0
 
 # Document Processing
 PyPDF2==3.0.1
