--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -24,9 +24,9 @@ openai==1.3.7
 # Text Processing and NLP
 rank-bm25==0.2.2
 
-# LangChain for Memory Management - Known available compatible versions
+# LangChain for Memory Management - Fixed dependency conflict
 langchain==0.1.17
-langchain-core==0.1.46
+langchain-core==0.1.48
 langchain-openai==0.1.6
 tiktoken==0.6.0
 
