--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -18,8 +18,8 @@ numpy==1.24.3
 pandas==2.0.3
 scikit-learn==1.3.0
 
-# OpenRouter/OpenAI API
-openai==1.3.7
+# OpenRouter/OpenAI API - Updated for langchain-openai compatibility
+openai==1.55.0
 
 # Text Processing and NLP
 rank-bm25==0.2.2
