--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,10 +111,15 @@ jobs:
         chmod 400 holowellness-key.pem
         ls -l holowellness-key.pem
         
-        # Create deployment script for remote execution
-        cat > remote-deploy.sh << 'EOF'
+        # Create deployment script for remote execution  
+        cat > remote-deploy.sh << EOF
         #!/bin/bash
         set -e
+        
+        # Configure AWS credentials on EC2 instance
+        export AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+        export AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+        export AWS_DEFAULT_REGION="${{ secrets.AWS_REGION }}"
         
         # Download and extract deployment package
         aws s3 cp s3://${{ env.DEPLOYMENT_BUCKET }}/holowellness-deployment.tar.gz /tmp/
