--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -149,8 +149,9 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         
-        # Install production dependencies
+        # Install production dependencies with CPU-only PyTorch
         pip install --upgrade pip
+        pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
         pip install -r requirements-prod.txt
         
         echo "   ✅ Python environment ready"
