Fix BSON import conflict: Remove standalone bson package (conflicts with pymongo)

--- a/backend/requirements-prod.txt
+++ b/backend/requirements-prod.txt
@@ -45,7 +45,7 @@ boto3==1.29.7
 
 # Utilities
 requests==2.31.0
-bson==0.5.10
+# bson==0.5.10  # Removed - conflicts with pymongo's built-in bson
 
 # Production WSGI Server
 waitress==2.1.2
