Fix YAML syntax error: Change EOL to EOF and escape nginx variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -190,7 +190,7 @@ jobs:
         sudo fuser -k 5000/tcp || true
         
         # Create a gunicorn config for better logging
-        cat > gunicorn.conf.py << 'EOL'
+        cat > gunicorn.conf.py << 'EOF'
 bind = "0.0.0.0:5000"
 workers = 2
 timeout = 120
@@ -200,7 +200,7 @@ preload_app = True
 daemon = True
 user = "ubuntu"
 group = "ubuntu"
-EOL
+EOF
         
         # Start gunicorn from the virtual environment with proper paths
         echo "📁 Current directory: $(pwd)"
@@ -230,20 +230,20 @@ EOL
             PUBLIC_IP=$(curl -s http://169.254.169.254/latest/meta-data/public-ipv4)
             
             # Configure simple nginx proxy to forward port 80 to 5000
-            sudo tee /etc/nginx/sites-available/holowellness > /dev/null << 'EOL'
+            sudo tee /etc/nginx/sites-available/holowellness > /dev/null << 'EOF'
 server {
     listen 80;
     server_name _;
     
     location / {
         proxy_pass http://127.0.0.1:5000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto \$scheme;
     }
 }
-EOL
+EOF
             
             # Enable the site and restart nginx
             sudo ln -sf /etc/nginx/sites-available/holowellness /etc/nginx/sites-enabled/
