--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -241,19 +241,19 @@ jobs:
             
             # Configure simple nginx proxy to forward port 80 to 5000
             sudo tee /etc/nginx/sites-available/holowellness > /dev/null << 'NGINX_CONFIG'
-server {
-    listen 80;
-    server_name _;
-
-    location / {
-        proxy_pass http://127.0.0.1:5000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-NGINX_CONFIG
+            server {
+                listen 80;
+                server_name _;
+        
+                location / {
+                    proxy_pass http://127.0.0.1:5000;
+                    proxy_set_header Host \$host;
+                    proxy_set_header X-Real-IP \$remote_addr;
+                    proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto \$scheme;
+                }
+            }
+            NGINX_CONFIG
             
             # Enable the site and restart nginx
             sudo ln -sf /etc/nginx/sites-available/holowellness /etc/nginx/sites-enabled/
