--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -199,6 +199,8 @@ jobs:
         OPENROUTER_BASE_URL="https://openrouter.ai/api/v1"
         OPENROUTER_MODEL="${OPENROUTER_MODEL_VAL}"
         OPENROUTER_MAX_TOKENS="1200"
+        OPENROUTER_RETRIES="2"
+        OPENROUTER_BACKOFF_MS="700"
         APP_PUBLIC_URL="http://${PUBIP}"
         APP_TITLE="HoloWellness Chatbot"
 
